# monexo

./: .env.example  .gitignore  Dockerfile  admins  bot.py  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  api_types.py  budget.py  state.py  telemetry.py
bot/: __init__.py  budget_change.py  next_day.py  settings.py
bot/handlers/: admin.py  message.py  start.py
bot_actions/: __init__.py  budget_change.py  help.py  next_day.py  start_settings.py  stats.py
bot_modules/: __init__.py  _bot_instance.py  budget_change.py  cancel.py  categories.py  common.py  kb.py  next_day.py  set_timezone.py  settings.py  start.py  stats.py  stop.py  telemetry.py  text.py  toggle_autoupdate.py  toggle_on_autoupdate.py
domain/: __init__.py
domain/models/: budget.py  budget_change.py  category.py  user.py  user_timezone_info.py
domain/repositories/: budget_change_repository.py  user_repository.py  user_timezone_info_repository.py
domain/tests/: user_repository_tests.py
pkg/: state.py
plugins/: !example.py  __init__.py  admin.py  budget_change.py  end_day.py  message.py  next_day.py  settings.py  start_register.py  stats.py
