[tool.poetry]
name = "monexo"
version = "0.1.0"
description = ""
authors = ["Mikhail Kozlov <kozlov_ma+nespamte@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

python-dotenv = "^1.0.0"
loguru = "^0.7.2"
option = "^2.1.0"
pytest = "^7.4.3"
pymongo = {extras = ["srv"], version = "^4.6.1"}
sqlalchemy = "^2.0.23"
aiogram = "^3.2.0"
asyncpg = "^0.29.0"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
